# programming_for_bfu

./: README.md
labs_for_bfu/lab_1/: lab_1.cpp
labs_for_bfu/lab_10/: lab_10.cpp
labs_for_bfu/lab_10/lab_10.xcodeproj/: project.pbxproj
labs_for_bfu/lab_11/: CMakeLists.txt  main.cpp
labs_for_bfu/lab_11/SFML/: CMakeLists.txt
labs_for_bfu/lab_3/: lab_3.cpp
labs_for_bfu/lab_4/lab_4_1/: lab_4_1.cpp
labs_for_bfu/lab_4/lab_4_2/: lab_4_2.cpp
labs_for_bfu/lab_4/lab_4_3/: lab_4_3.cpp
labs_for_bfu/lab_5/lab_5_1/: lab_5_1.cpp
labs_for_bfu/lab_5/lab_5_2/: input.txt  lab_5_2.cpp
labs_for_bfu/lab_5/lab_5_2.xcodeproj/: project.pbxproj
labs_for_bfu/lab_6/: lab_6.cpp
labs_for_bfu/lab_6/lab_6.xcodeproj/: project.pbxproj
labs_for_bfu/lab_7/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  funcs.cpp  funcs.hpp  input.txt
labs_for_bfu/lab_7/CMakeScripts/: ReRunCMake.make
labs_for_bfu/lab_7/lab_7.xcodeproj/: project.pbxproj
labs_for_bfu/lab_8/: lab_8.cpp
labs_for_bfu/lab_8/lab_8.xcodeproj/: project.pbxproj
labs_for_bfu/lab_9/: lab_9.cpp
labs_for_bfu/lab_9/lab_9.xcodeproj/: project.pbxproj
practise_for_bfu/: code.txt
practise_for_bfu/practise_2/: func_for_practise.cpp  func_for_practise.hpp  practise_2.cpp
practise_for_bfu/practise_2/practise_2.xcodeproj/: project.pbxproj
practise_for_bfu/practise_4/: practise_4.cpp
practise_for_bfu/practise_4/practise_4.xcodeproj/: project.pbxproj
practise_for_bfu/practise_5/: practise_5.cpp
practise_for_bfu/practise_6/: ReadMe.md  main.cpp
(+14 files in other folders)
